# pygeodesic

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-and-deploy.yml
pygeodesic/: __init__.py  geodesic.cpp  geodesic.pyx  version.py
pygeodesic/examples/: pygdist_intro.ipynb  pygeodesic_intro.ipynb  pygeodesic_stanford_bunny.ipynb  vtk_helpers.py
pygeodesic/geodesic_kirsanov/: geodesic_algorithm_exact.h  geodesic_mesh_elements.h
tests/: test_pygeodesic.py
